[package]
name = "anthropic-api"
version = "0.0.3"
authors = ["Craig Swift <craigswift13@gmail.com>", "swiftyos"]
edition = "2021"
description = "An unofficial Rust library for the Anthropic API."
license = "MIT"
keywords = ["ai", "anthropic", "api", "async"]
homepage = "https://github.com/Swiftyos/anthropic"
repository = "https://github.com/Swiftyos/anthropic"

[dependencies]
anyhow = "1.0"
derive_builder = "0.20.0"
futures-util = "0.3"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "stream"], optional = true }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }


[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]


[[example]]
name = "message_cli"
path = "examples/message_cli.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "tool_use" 
path = "examples/tool_use.rs"

[[example]]
name = "models"
path = "examples/models.rs"